<resources>
    <string name="app_name">Androsphinx</string>
    <string name="scan_qr_title">Scan from QR code</string>
    <string name="scan_qr_summary">Set all the above using the camera of your device</string>
    <string name="scan_qr_done">Server settings have been saved successfully</string>
    <string name="scan_qr_error">"Server settings couldn't be read correctly"</string>
    <string name="preference_category_server">SPHINX server parameters</string>
    <string name="preference_host">Hostname</string>
    <string name="preference_port">Port number</string>
    <string name="preference_rwd_keys">Favor availability over confidentiality</string>
    <string name="settings">Settings</string>
    <string name="share_qr_public_title">Share as public QR code</string>
    <string name="share_qr_public_summary">Display public server settings to be read by a friend with a camera to join this server</string>
    <string name="share_qr_private_title">Share as private QR code</string>
    <string name="share_qr_private_summary">Display public server settings and private key to be read by another device of yours with a camera to sync</string>
    <string name="search_hint">Search by URL or hostname</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_username_title">Add a user</string>
    <string name="add_username_btn">Add</string>
    <string name="add_username_placeholder">username</string>
    <string name="add_password_length_placeholder">password length</string>
    <string name="no_users_for_host">No users found for his host</string>
    <string name="master_password">master password</string>
    <string name="master_password_confirm">confirm master password</string>
    <string name="server_error_title">A server error occurred</string>
    <string name="server_error_password_title">A server error occurred, make sure the master password is valid</string>
    <string name="sodium_error_title">A cryptographic error occurred, make sure the master password is valid</string>
    <string name="check_digit_mismatch_title">Check digit mismatch, make sure the master password is valid</string>
    <string name="unknown_version_title">Your client is too old to handle the server response. Please update your client.</string>
    <string name="io_error_title">A network error occurred</string>
    <string name="unknown_error_title">An unknown error occurred</string>
    <string name="internal_error_title">An internal error occurred</string>
    <string name="try_again_confirm">Would you like to try again?</string>
    <string name="no_server_setup">Server configuration is incomplete</string>
    <string name="open_settings">Open settings</string>
    <string name="retry">Retry</string>
    <string name="btn_generate_copy">Copy password</string>
    <string name="btn_generate_change">Generate new password</string>
    <string name="btn_undo_change">Undo password change</string>
    <string name="btn_commit_change">Save new password</string>
    <string name="btn_delete_user">Delete user</string>
    <string name="confirm_delete_user_title">Confirm deletion</string>
    <string name="confirm_delete_user_msg">Are you sure you want to delete %1$s from %2$s This cannot be undone.</string>
    <string name="password_copied_to_clipboard">Password has been copied to the clipboard</string>
    <string name="old_password_copied_to_clipboard">The old password was restored; tap [Save new password] below to replace it with the new password again, if you change your mind</string>
    <string name="new_password_copied_to_clipboard">The new password was saved; tap [Undo password change] below to replace it with the old password again, if you change your mind</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
    <string name="user_deleted">User deleted successfully</string>
    <string name="password_change_mode">A new password was generated for this user and copied to the clipboard; tap [Save new password] below to make this permanent after you\'ve changed the password on the site</string>
    <string name="connecting_to_server">Connecting to SPHINX server</string>
    <string name="character_class_upper">uppercase letters (A–Z)</string>
    <string name="character_class_lower">lowercase letters (a–z)</string>
    <string name="character_class_symbols">symbols (/, @, ~, …)</string>
    <string name="character_class_digits">digits (0–9)</string>
    <string name="preference_category_autofill">AutoFill</string>
    <string name="autofill_system_service_null_title">Cannot get AutoFill system service</string>
    <string name="autofill_system_service_null_summary">Please try again and report this error if this persists</string>
    <string name="autofill_provider_already_set">AndroSphinx is set as your AutoFill provider</string>
    <string name="request_autofill_set_title">Set AndroSphinx to provide AutoFill services</string>
    <string name="request_autofill_set_summary">Tap here to open the relevant setting</string>
    <string name="autofill_not_supported_title">Your device doesn\'t support AutoFill</string>
    <string name="autofill_not_supported_summary">This could be because of the manufacturer or your employer\'s decision</string>
    <string name="autofill_no_os_feature_title">Your OS doesn\'t support AutoFill</string>
    <string name="autofill_no_os_feature_summary">Try upgrading to a newer OS version</string>
    <string name="preference_clipboard_cleaner_timeout_seconds_title">Clipboard cleaner timeout in seconds</string>
    <string name="preference_clipboard_cleaner_timeout_seconds_summary">The amount of time to wait before removing passwords copied to the clipboard (0 = disabled)</string>
    <string name="master_key_overwrite_title">Confirm overwriting secret key</string>
    <string name="master_key_overwrite_msg">This device already has its own SPHINX secret key, which differs from the one scanned from the QR code. If you already stored credentials on this device using this app, those will be inaccessible without a backup. Are you sure you want to overwrite your key with the one from the QR code?</string>
    <string name="overwrite">Overwrite</string>
    <string name="on_save_request_message">SPHINX cannot save arbitrary passwords by design</string>
    <string name="autofill_remote_button_text">Open Androsphinx for AutoFill</string>
    <string name="autofill_remote_button_user_text">"AutoFill "%s" with SPHINX"</string>
    <string name="autofill_no_domain_failure">Couldn\'t determine domain name for SPHINX AutoFill</string>
    <string name="btn_generate_autofill">AutoFill form with password</string>
    <string name="password_strength_format">This master password is %1$s as it could be guessed %2$s</string>
    <string name="password_strength_weak">weak</string>
    <string name="password_strength_fair">fair</string>
    <string name="password_strength_good">good</string>
    <string name="password_strength_strong">strong</string>
    <string name="password_strength_very_strong">very strong</string>
    <string name="autofill_no_inputs">No suitable inputs were found for SPHINX AutoFill</string>
    <string name="clipboard_cleaner_notification_title">Password on clipboard</string>
    <string name="clipboard_cleaner_notification">Password will be removed from the clipboard in %d second(s)</string>
    <string name="main_welcome_title">Welcome</string>
    <string name="main_intro_text">Androsphinx lets you
        \n • generate strong passwords and
        \n • synchronize them between all your devices.
        \n
        \nTo configure a SPHINX server, pair your device to a desktop computer running SPHINX or set up AutoFill, tap ⚙️ above.
        \n
        \nTo generate or retrieve passwords, you have three options:
        \n
        \n1. Set up AutoFill and use a compatible browser
        \n
        \n2. Use the Share option in your browser and choose Androsphinx as the target
        \n
        \n3. Tap 🔍 in the top bar and enter the domain name
    </string>
    <string name="custom_symbol_set_picker_title">Pick custom symbol set</string>
    <string name="symbol_set_picker_space">(space)</string>
    <string name="symbol_set_picker_all">Select all</string>
    <string name="symbol_set_picker_none">Select none</string>
</resources>
