<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_server">

        <EditTextPreference
            android:key="host"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_host" />
        <org.hsbp.androsphinx.IntEditTextPreference
            android:key="port"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="5"
            android:singleLine="true"
            android:title="@string/preference_port" />
        <EditTextPreference
            android:key="server_pk"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_server_pk" />
        <Preference
            android:key="scan_qr"
            android:title="@string/scan_qr_title"
            android:summary="@string/scan_qr_summary" />
    </PreferenceCategory>
</PreferenceScreen>